--- a/libinibin.csproj
+++ b/libinibin.csproj
@@ -51,10 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterInibinKeyHashes.cs" />
+    <Compile Include="IInibin.cs" />
+    <Compile Include="IInibinLoader.cs" />
     <Compile Include="InibinLoader.cs" />
     <Compile Include="InibinTroybinDataSection.cs" />
-    <Compile Include="InibinTroybinFile.cs" />
-    <Compile Include="InibinTroybinFile.Writer.cs" />
+    <Compile Include="Inibin.cs" />
+    <Compile Include="InibinWriter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Vector2.cs" />
     <Compile Include="Vector3.cs" />
